<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="18dp"
            android:stretchColumns="3"
            tools:context=".MainActivity">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/server_host" />

                <EditText
                    android:id="@+id/host_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/server_port" />

                <EditText
                    android:id="@+id/port_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/username_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/pass_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:inputType="textPassword"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/fname_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/lname_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/email_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:inputType="textEmailAddress"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/gender" />

                <RadioGroup
                    android:id="@+id/gender_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"/>

                    <RadioButton
                        android:id="@+id/female_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/register_button"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:text="@string/login_button" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>